- Moved request as an actual dependency so request-promise works fine

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.15.3",
     "strong-supervisor": "^6.2.0",
     "log4js": "^1.1.1",
+    "request": "2.85.0",
     "request-promise": "4.2.2"
   },
   "devDependencies": {
@@ -34,7 +35,6 @@
     "mocha": "^3.4.2",
     "nyc": "^10.3.2",
     "prompt-confirm": "^1.2.0",
-    "proxyquire": "^1.8.0",
-    "request": "^2.82.0"
+    "proxyquire": "^1.8.0"
   }
 }
